tests/ui/errors/snapshots/infer_not_a_type_unit_variant_prelude.snap
---
source: tests/ui/errors/mod.rs
assertion_line: 1831
---
  [error] `None` is not a type
   ╭─[test.lis:2:17]
 1 │ 
 2 │ fn nothing() -> None {
   ·                 ──┬─
   ·                   ╰── enum variant used in type position
 3 │   return None
   ╰────
  help: Use `Option` for the enum type · code: [resolve.not_a_type]
