tests/ui/errors/snapshots/infer_not_callable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Not callable
   ╭─[test.lis:4:3]
 3 │   let x = 42;
 4 │   x(1, 2)
   ·   ┬
   ·   ╰── expected function, found `int`
 5 │ }
   ╰────
  help: Only functions can be called with `()` · code: [infer.not_callable]
