tests/ui/errors/snapshots/infer_not_callable_suggests_as_cast_for_primitive_type_name.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Not callable
   ╭─[test.lis:3:11]
 2 │ fn test(contents: Slice<byte>) {
 3 │   let _ = string(contents)
   ·           ───┬──
   ·              ╰── expected function, found `string`
 4 │ }
   ╰────
  help: Use `contents as string` to convert between types · code: [infer.not_callable]
