tests/ui/errors/snapshots/infer_not_comparable_concrete_against_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:13:21]
 12 │ fn test(c: Circle, s: Shape) {
 13 │   let result = c == s;
    ·                     ┬
    ·                     ╰── `Shape` cannot be compared with `==`
 14 │ }
    ╰────
  help: An interface value's comparability depends on its runtime type, so `==` and `!=` are not allowed here. Compare the concrete values instead · code: [infer.type_mismatch]
