tests/ui/errors/snapshots/infer_not_comparable_enum_with_slice.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid comparison
    ╭─[test.lis:10:16]
  9 │   let b = Bar.Empty;
 10 │   let result = a == b;
    ·                ┬
    ·                ╰── `Bar` cannot be compared with `==`
 11 │ }
    ╰────
  help: Mark `Bar` with `#[equality]` to compare it with `.equals()` · code: [infer.type_mismatch]
