tests/ui/errors/snapshots/infer_not_comparable_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:16]
 4 │   let g = |x: int| x + 2;
 5 │   let result = f == g;
   ·                ┬
   ·                ╰── `fn (int) -> int` cannot be compared with `==`
 6 │ }
   ╰────
  help: The `==` and `!=` operators cannot be used on functions because they are not comparable in Go · code: [infer.type_mismatch]
