tests/ui/errors/snapshots/infer_not_comparable_function_through_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:16]
 4 │ fn test(a: Callback, b: Callback) {
 5 │   let result = a == b;
   ·                ┬
   ·                ╰── `Callback` cannot be compared with `==`
 6 │ }
   ╰────
  help: The `==` and `!=` operators cannot be used on functions because they are not comparable in Go · code: [infer.type_mismatch]
