tests/ui/errors/snapshots/infer_not_comparable_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:7:16]
 6 │ fn test(a: Shape, b: Shape) {
 7 │   let result = a == b;
   ·                ┬
   ·                ╰── `Shape` cannot be compared with `==`
 8 │ }
   ╰────
  help: An interface value's comparability depends on its runtime type, so `==` and `!=` are not allowed here. Compare the concrete values instead · code: [infer.type_mismatch]
