tests/ui/errors/snapshots/infer_not_comparable_interface_through_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:9:16]
  8 │ fn test(a: ShapeAlias, b: ShapeAlias) {
  9 │   let result = a == b;
    ·                ┬
    ·                ╰── `ShapeAlias` cannot be compared with `==`
 10 │ }
    ╰────
  help: An interface value's comparability depends on its runtime type, so `==` and `!=` are not allowed here. Compare the concrete values instead · code: [infer.type_mismatch]
