tests/ui/errors/snapshots/infer_not_comparable_map.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:3:16]
 2 │ fn test(a: Map<string, int>, b: Map<string, int>) {
 3 │   let result = a == b;
   ·                ┬
   ·                ╰── `Map<string, int>` cannot be compared with `==`
 4 │ }
   ╰────
  help: Use `.equals()` to compare maps · code: [infer.type_mismatch]
