tests/ui/errors/snapshots/infer_not_comparable_map_of_functions.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:3:3]
 2 │ fn test(a: Map<string, fn() -> int>, b: Map<string, fn() -> int>) -> bool {
 3 │   a == b
   ·   ┬
   ·   ╰── `Map<string, fn () -> int>` cannot be compared with `==`
 4 │ }
   ╰────
  help: `.equals()` will not help either, because functions cannot be compared · code: [infer.type_mismatch]
